--- a/app/views/v2/employer/api/api-hub.html
+++ b/app/views/v2/employer/api/api-hub.html
@@ -1,7 +1,7 @@
 {% extends "ma-layout.html" %}
 
 {% block pageTitle %}
-Create keys for APIs - Manage apprenticeships - GOV.UK
+Get key for API - Manage apprenticeships - GOV.UK
 {% endblock %}
 {% block beforeContent %}
 <div class="govuk-grid-row">
@@ -17,7 +17,7 @@ Create keys for APIs - Manage apprenticeships - GOV.UK
     <!--{{ govukPanel({
       titleText: "Key copied"      
     }) }}-->
-        <h1 class="govuk-heading-xl">Create keys for APIs</h1>
+        <h1 class="govuk-heading-xl">Get key for API</h1>
           <p class="govuk-body">
             You need to copy a key and give it to your developer, this gives them permission to connect to the API on your behalf.
           </p>
@@ -37,7 +37,7 @@ Create keys for APIs - Manage apprenticeships - GOV.UK
             <div class="app-summary-card--content">
               <p class="govuk-body">
                 Create an advert on any website and Find an apprenticeship.<br>
-                Give the key and <a href="../../guidance/recruitment-api-documentation" class="govuk-link govuk-link--no-visited-state">this link to the API page</a> to your developer.
+                Give the key and <a href="../../guidance/recruitment-api-documentation" class="govuk-link govuk-link--no-visited-state">the link to the API page</a> to your developer.
               </p>
               <dl class="govuk-summary-list govuk-summary-list__m">
                 <div class="govuk-summary-list__row">
