--- a/app/views/v2/employer/api/api.html
+++ b/app/views/v2/employer/api/api.html
@@ -1,7 +1,7 @@
 {% extends "ma-layout.html" %}
 
 {% block pageTitle %}
-Get started with the recruitment API - Manage apprentices
+Get started with the recruitment APIs - Manage apprentices
 {% endblock %}
 {% block beforeContent %}
 <div class="govuk-grid-row">
@@ -14,26 +14,26 @@ Get started with the recruitment API - Manage apprentices
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-xl">Get started with the recruitment API</h1>
+    <h1 class="govuk-heading-xl">Get started with the recruitment APIs</h1>
       <p class="govuk-body">
-        Integrating with our <a href="#" class="govuk-link govuk-link--no-visited-state">Recruitment API</a> may be useful if you want to create adverts using your existing systems. It will allow you to publish to multiple sites, as well as <a href="#" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>.
+        Integrating with the <a href="../../guidance/recruitment-api-documentation" class="govuk-link govuk-link--no-visited-state">Recruitment API</a> may be useful if you want to create adverts using your existing systems. It will allow you to publish to multiple sites, as well as <a href="#" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>.
         <br><br>
-        You can also use the <a href="#" class="govuk-link govuk-link--no-visited-state">Display adverts API</a> to display adverts on any website.  
+        You can also use the <a href="../../guidance/display-adverts-api-documentation" class="govuk-link govuk-link--no-visited-state">Display adverts API</a> to display adverts on any website.  
       </p>
-      <h2 class="govuk-heading-l">What does the API do?</h2> 
+      <h2 class="govuk-heading-l">What does an API do?</h2> 
       <p class="govuk-body">
         APIs (Application Programming Interfaces) let applications share information and data with each other.
         <br><br>
-        If you connect using our <a href="#" class="govuk-link govuk-link--no-visited-state">Recruitment API</a>, you can use your own systems to create adverts on <a href="#" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>. 
+        If you connect using our Recruitment API, you can use your own systems to create adverts on <a href="#" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>. 
         <br><br>
-        You can also use our <a href="#" class="govuk-link govuk-link--no-visited-state">Display adverts API</a> to display your adverts on any website.
+        You can also use our Display adverts API to display your adverts on any website.
       </p>
       <h2 class="govuk-heading-l">How do I use the API?</h2> 
       <div class="govuk-inset-text">
-        You'll need someone with technical knowledge to connect your software program with the API, for example a software developer. 
+        You'll need someone with technical knowledge to connect your software program with the API, for example a software developer.
       </div>
       <p class="govuk-body">
-        You can share this <a href="../govuk/api-list" class="govuk-link govuk-link--no-visited-state">API page</a> with the person who is going to connect your software program with the API.         
+        You can share these <a href="../../guidance/get-started" class="govuk-link govuk-link--no-visited-state">API pages</a> with the person who is going to connect your software program with the APIs.         
       </p>
       <p class="govuk-body">
         It can take a while to connect using an API, so leave enough time to integrate it.
@@ -44,7 +44,7 @@ Get started with the recruitment API - Manage apprentices
         <br><br>
         Your developer will be able to try out the API using the sandbox provided.
         <br><br>
-        You will need to <a href="#" class="govuk-link govuk-link--no-visited-state">provide your developer with a key</a> so they can use the API.
+        You will need to <a href="#" class="govuk-link govuk-link--no-visited-state">provide your developer with a key</a> so they can use the APIs.
       </p>
   </div>
 </div>
