--- a/app/views/v2/employer/dashboard.html
+++ b/app/views/v2/employer/dashboard.html
@@ -233,8 +233,8 @@ Your apprentice adverts - Manage apprenticeships - GOV.UK
       </div>
 
       <div class="govuk-grid-column-one-third ">
-        <h3 class="govuk-heading-s"><a class="govuk-link govuk-link--no-visited-state" href="api/api">Recruitment API</a></h3>
-        <p class="govuk-body">Integrate our API to create adverts using your own systems and display adverts on multiple sites.</p>
+        <h3 class="govuk-heading-s"><a class="govuk-link govuk-link--no-visited-state" href="api/api">Recruitment APIs</a></h3>
+        <p class="govuk-body">Integrate our APIs to create vacancies using your own systems and display adverts on multiple sites.</p>
       </div>
     </div>
 
