--- a/app/views/v2/guidance/recruitment-api-documentation.html
+++ b/app/views/v2/guidance/recruitment-api-documentation.html
@@ -4,11 +4,19 @@
 Recruitment API documentation - Apprenticeship services - GOV.UK
 {% endblock %}
 
+{% block beforeContent %}
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-full">
+      <a href="javascript:history.back()" class="govuk-back-link">Back</a>
+  </div>
+</div>
+{% endblock %}
+
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-xl">Recruitment API documentation</h1>      
-    <code>Content provided for developers...</code>
+    <img src="/public/images/developer-hub.png" alt="Example of API code">
   </div>
 </div>
 {% endblock %}
