#128 and #129 - updated provider API journey

--- a/app/views/v2/employer/api/api.html
+++ b/app/views/v2/employer/api/api.html
@@ -16,17 +16,17 @@ Get started with the recruitment APIs - Manage apprentices
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-xl">Get started with the recruitment APIs</h1>
       <p class="govuk-body">
-        Integrating with the <a href="../../guidance/recruitment-api-documentation" class="govuk-link govuk-link--no-visited-state">Recruitment API</a> may be useful if you want to create adverts using your existing systems. It will allow you to publish to multiple sites, as well as <a href="#" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>.
+        Integrating with our Recruitment API may be useful if you want to create adverts using your existing systems. It will allow you to publish to multiple sites, as well as <a href="#" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>.
         <br><br>
-        You can also use the <a href="../../guidance/display-adverts-api-documentation" class="govuk-link govuk-link--no-visited-state">Display adverts API</a> to display adverts on any website.  
+        The Display adverts API allows you to display adverts from Find an Apprenticeship on any website.
       </p>
       <h2 class="govuk-heading-l">What does an API do?</h2> 
       <p class="govuk-body">
         APIs (Application Programming Interfaces) let applications share information and data with each other.
         <br><br>
-        If you connect using our Recruitment API, you can use your own systems to create adverts on <a href="#" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>. 
+        If you connect using the Recruitment API, you can use your own systems to publish to multiple sites, as well as <a href="#" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>. 
         <br><br>
-        You can also use our Display adverts API to display your adverts on any website.
+        You can also use the Display adverts API to display adverts from Find an Apprenticeship on any website.
       </p>
       <h2 class="govuk-heading-l">How do I use the API?</h2> 
       <div class="govuk-inset-text">
