--- a/app/views/v2/provider/api/api-hub.html
+++ b/app/views/v2/provider/api/api-hub.html
@@ -1,7 +1,7 @@
 {% extends "tp-layout.html" %}
 
 {% block pageTitle %}
-API hub - Apprenticeships - GOV.UK
+Get key for API - Apprenticeships - GOV.UK
 {% endblock %}
 {% block beforeContent %}
 <div class="govuk-grid-row">
@@ -14,7 +14,7 @@ API hub - Apprenticeships - GOV.UK
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-xl">Create keys for APIs</h1>
+    <h1 class="govuk-heading-xl">Get key for API</h1>
       <p class="govuk-body">
         You need to copy a key and give it to your developer, this gives them permission to connect to the API on your behalf.
       </p>
