--- a/app/views/v2/provider/api/api-hub-copied.html
+++ b/app/views/v2/provider/api/api-hub-copied.html
@@ -1,7 +1,7 @@
 {% extends "tp-layout.html" %}
 
 {% block pageTitle %}
-API key copied - Apprenticeships - GOV.UK
+Get key for API - Apprenticeships - GOV.UK
 {% endblock %}
 {% block beforeContent %}
 <div class="govuk-grid-row">
@@ -17,7 +17,7 @@ API key copied - Apprenticeships - GOV.UK
     <!--{{ govukPanel({
       titleText: "Key copied"      
     }) }}-->
-        <h1 class="govuk-heading-xl">Create keys for APIs</h1>
+        <h1 class="govuk-heading-xl">Get key for API</h1>
           <p class="govuk-body">
             You need to copy a key and give it to your developer, this gives them permission to connect to the API on your behalf.
           </p>
