--- a/app/views/v2/provider/api/api-hub-new-key.html
+++ b/app/views/v2/provider/api/api-hub-new-key.html
@@ -1,7 +1,7 @@
 {% extends "tp-layout.html" %}
 
 {% block pageTitle %}
-API key renewed - Apprenticeships - GOV.UK
+Get key for API - Apprenticeships - GOV.UK
 {% endblock %}
 {% block beforeContent %}
 <div class="govuk-grid-row">
@@ -18,7 +18,7 @@ API key renewed - Apprenticeships - GOV.UK
       titleText: "Key renewed",
       html: ""
     }) }}
-        <h1 class="govuk-heading-xl govuk-!-margin-top-6">Create key for API</h1>
+        <h1 class="govuk-heading-xl govuk-!-margin-top-6">Get key for API</h1>
           <p class="govuk-body">
             You need to copy a key and give it to your developer, this gives them permission to connect to the API on your behalf.
           </p>
