--- a/app/views/v2/provider/api/api.html
+++ b/app/views/v2/provider/api/api.html
@@ -1,7 +1,7 @@
 {% extends "tp-layout.html" %}
 
 {% block pageTitle %}
-Get started with the recruitment API - Manage apprentices
+Get started with the recruitment APIs - Apprenticeships - GOV.UK
 {% endblock %}
 {% block beforeContent %}
 <div class="govuk-grid-row">
@@ -14,26 +14,26 @@ Get started with the recruitment API - Manage apprentices
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-xl">Get started with the recruitment API</h1>
+    <h1 class="govuk-heading-xl">Get started with the recruitment APIs</h1>
       <p class="govuk-body">
-        Integrating with our <a href="#" class="govuk-link govuk-link--no-visited-state">Recruitment API</a> may be useful if you want to create vacancies using your existing systems. It will allow you to publish to multiple sites, as well as <a href="#" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>.
+        Integrating with our Recruitment API may be useful if you want to create vacancies using your existing systems. It will allow you to publish to multiple sites, as well as <a href="#" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>.
         <br><br>
-        You can also use the <a href="#" class="govuk-link govuk-link--no-visited-state">Display adverts API</a> to display vacancies on any website.  
+        The Display adverts API allows you to display vacancies from Find an Apprenticeship on any website.
       </p>
-      <h2 class="govuk-heading-l">What does the API do?</h2> 
+      <h2 class="govuk-heading-l">What does an API do?</h2> 
       <p class="govuk-body">
         APIs (Application Programming Interfaces) let applications share information and data with each other.
         <br><br>
-        If you connect using our <a href="#" class="govuk-link govuk-link--no-visited-state">Recruitment API</a>, you can use your own systems to create vacancies on <a href="#" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>. 
+        If you connect using the Recruitment API, you can use your own systems to publish to multiple sites, as well as <a href="#" class="govuk-link govuk-link--no-visited-state">Find an apprenticeship</a>. 
         <br><br>
-        You can also use our <a href="#" class="govuk-link govuk-link--no-visited-state">Display adverts API</a> to display your vacancies on any website.
+        You can also use the Display adverts API to display vacancies from Find an Apprenticeship on any website.
       </p>
       <h2 class="govuk-heading-l">How do I use the API?</h2> 
       <div class="govuk-inset-text">
         You'll need someone with technical knowledge to connect your software program with the API, for example a software developer. 
       </div>
       <p class="govuk-body">
-        You can share this <a href="#" class="govuk-link govuk-link--no-visited-state">API page</a> with the person who is going to connect your software program with the API.         
+        You can share the <a href="../../guidance/get-started" class="govuk-link govuk-link--no-visited-state">API page</a> with the person who is going to connect your software program with the API.         
       </p>
       <p class="govuk-body">
         It can take a while to connect using an API, so leave enough time to integrate it.
