--- a/app/views/v2/employer/api/api-subscribed.html
+++ b/app/views/v2/employer/api/api-subscribed.html
@@ -1,7 +1,7 @@
 {% extends "ma-layout.html" %}
 
 {% block pageTitle %}
-API hub - Manage apprenticeships - GOV.UK
+Display adverts API key - Manage apprenticeships - GOV.UK
 {% endblock %}
 {% block beforeContent %}
 <div class="govuk-grid-row">
@@ -17,13 +17,13 @@ API hub - Manage apprenticeships - GOV.UK
     {{ govukPanel({
       titleText: "Successfully suscribed to API"      
     }) }}
-    <h1 class="govuk-heading-xl govuk-!-margin-top-9">Create keys for APIs</h1>
+    <h1 class="govuk-heading-xl govuk-!-margin-top-9">Display adverts API key</h1>
       <p class="govuk-body">
-        You need to copy a key and give it to your developer, this gives them permission to connect to the API on your behalf.
+        You need to copy the API key and give it to your developer, this gives them permission to connect to the API on your behalf.
       </p>
       <div class="app-summary-card ">
         <header class="app-summary-card--header">
-          <h3 class="app-summary-card--title">Recruitment API (Live)</h3>
+          <h3 class="app-summary-card--title">Display adverts API (Live)</h3>
           <div class="app-summary-card__actions">
             <!--<ul class="app-summary-card__actions-list">
               <li class="app-summary-card__actions-list-item">
@@ -37,7 +37,7 @@ API hub - Manage apprenticeships - GOV.UK
         <div class="app-summary-card--content">
           <p class="govuk-body">
             Create an advert on any website and Find an apprenticeship.<br>
-            Give the key and <a href="" class="govuk-link govuk-link--no-visited-state">this link to the API page</a> to your developer.
+            Give the API key and <a href="display-adverts-api-documentation" class="govuk-link govuk-link--no-visited-state">this link to the API page</a> to your developer.
           </p>
           <dl class="govuk-summary-list govuk-summary-list__m">
             <div class="govuk-summary-list__row">
