--- a/app/views/v2/guidance/api-list.html
+++ b/app/views/v2/guidance/api-list.html
@@ -15,13 +15,14 @@ Subscribe to the APIs - Apprenticeship services - GOV.UK
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
           <th class="govuk-table__header" scope="col"> API name </th>
-          <th class="govuk-table__header" scope="col"> Action </th>
+          <th class="govuk-table__header" scope="col" style="width:12%;"> Action </th>
         </tr>
       </thead>
       <tbody class="govuk-table__body">
         <tr class="govuk-table__row">
           <td class="govuk-table__cell" id="display-adverts-api">
             Display adverts API
+            <span class="govuk-caption-m">Display recruitment adverts from Find an apprenticeship.</span>
           </td>
           <td class="govuk-table__cell">
             <a href="api-subscribe" class="govuk-link govuk-link--no-visited-state">
