#128 and #129 - updated dev portal API journey

--- a/app/views/v2/guidance/get-started.html
+++ b/app/views/v2/guidance/get-started.html
@@ -11,7 +11,7 @@ Get started - Apprenticeship services - GOV.UK
     <h2 class="govuk-heading-l">About the recruitment and display adverts APIs</h2>
     <p class="govuk-body">
       <a href="recruitment-api-documentation" class="govuk-link govuk-link--no-visited-state">Recruitment API</a><br><br>
-      <a href="recruitment-api-documentation" class="govuk-link govuk-link--no-visited-state">Recruitment API sandbox</a><br><br>
+      <a href="recruitment-api-sandbox-documentation" class="govuk-link govuk-link--no-visited-state">Recruitment API sandbox</a><br><br>
       <a href="display-adverts-api-documentation" class="govuk-link govuk-link--no-visited-state">Display adverts API</a><br><br>
       RESTful APIs.<br><br>
       Being RESTful, each record of information is assigned a globally unique URI, and the operations available on each resource are directly mapped to HTTP verbs. Data can be easily consumed by issuing simple GET requests on the required resource URI.<br><br>
@@ -31,7 +31,7 @@ Get started - Apprenticeship services - GOV.UK
     </p>
     <h2 class="govuk-heading-l">Using our display adverts API if you are working independently</h2>
     <p class="govuk-body">
-      You will need to subscribe to the API and get a key.<br><br>
+      You will need to <a href="register">subscribe to the API</a> and get a key.<br><br>
       You will then be able to use the display advert API.<br><br>
       If you would like to view the documentation and API you <a href="#" class="govuk-link govuk-link--no-visited-state">access it here</a>.<br>
     </p>
