#128 and #129 - updated dev portal API journey

--- a/app/views/v2/guidance/get-started.html
+++ b/app/views/v2/guidance/get-started.html
@@ -31,7 +31,7 @@ Get started - Apprenticeship services - GOV.UK
     </p>
     <h2 class="govuk-heading-l">Using our display adverts API if you are working independently</h2>
     <p class="govuk-body">
-      You will need to <a href="register">subscribe to the API</a> and get a key.<br><br>
+      You will need to <a href="register" class="govuk-link govuk-link--no-visited-state">subscribe to the API</a> and get a key.<br><br>
       You will then be able to use the display advert API.<br><br>
       If you would like to view the documentation and API you <a href="#" class="govuk-link govuk-link--no-visited-state">access it here</a>.<br>
     </p>
