--- a/app/views/v2/provider/api/api-hub-new-key.html
+++ b/app/views/v2/provider/api/api-hub-new-key.html
@@ -1,7 +1,7 @@
 {% extends "tp-layout.html" %}
 
 {% block pageTitle %}
-Get key for API - Apprenticeships - GOV.UK
+Key for API - Apprenticeships - GOV.UK
 {% endblock %}
 {% block beforeContent %}
 <div class="govuk-grid-row">
@@ -18,7 +18,7 @@ Get key for API - Apprenticeships - GOV.UK
       titleText: "Key renewed",
       html: ""
     }) }}
-        <h1 class="govuk-heading-xl govuk-!-margin-top-6">Get key for API</h1>
+        <h1 class="govuk-heading-xl govuk-!-margin-top-6">Key for API</h1>
           <p class="govuk-body">
             You need to copy a key and give it to your developer, this gives them permission to connect to the API on your behalf.
           </p>
@@ -62,7 +62,7 @@ Get key for API - Apprenticeships - GOV.UK
                   </span>
                 </summary>
                 <div class="govuk-details__text">
-                  <a href="api-confirm-key" class="govuk-link govuk-link--no-visited-state">Renewing the key</a> will disable the previous key and will stop your API from working until you use the new key.
+                  Renewing the key will disable the previous key and will stop your API from working until you use the new key. <a href="api-confirm-key" class="govuk-link govuk-link--no-visited-state">Renew the key</a>.
                 </div>
               </details>
             </div>
