--- a/app/views/v2/employer/api/api.html
+++ b/app/views/v2/employer/api/api.html
@@ -33,7 +33,7 @@ Get started with the recruitment APIs - Manage apprentices
         You'll need someone with technical knowledge to connect your software program with the API, for example a software developer.
       </div>
       <p class="govuk-body">
-        You can share these <a href="../../guidance/get-started" class="govuk-link govuk-link--no-visited-state">API pages</a> with the person who is going to connect your software program with the APIs.         
+        You can share the <a href="../../guidance/get-started" class="govuk-link govuk-link--no-visited-state">developer get started page</a> with the person who is going to connect your software program with the API, they can access the API from there.             
       </p>
       <p class="govuk-body">
         It can take a while to connect using an API, so leave enough time to integrate it.
@@ -44,7 +44,7 @@ Get started with the recruitment APIs - Manage apprentices
         <br><br>
         Your developer will be able to try out the API using the sandbox provided.
         <br><br>
-        You will need to <a href="#" class="govuk-link govuk-link--no-visited-state">provide your developer with a key</a> so they can use the APIs.
+        You will need to <a href="api-list" class="govuk-link govuk-link--no-visited-state">provide your developer with a key</a> and <a href="../../guidance/get-started" class="govuk-link govuk-link--no-visited-state"> the developer get started page</a> so they can use the APIs.
       </p>
   </div>
 </div>
