--- a/app/views/v2/guidance/api-subscribed.html
+++ b/app/views/v2/guidance/api-subscribed.html
@@ -15,7 +15,7 @@ Display adverts API key - Manage apprenticeships - GOV.UK
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     {{ govukPanel({
-      titleText: "Successfully suscribed to API"      
+      titleText: "Successfully subscribed to API"      
     }) }}
     <h1 class="govuk-heading-xl govuk-!-margin-top-9">Display adverts API key</h1>
       <p class="govuk-body">
