--- a/app/views/v2/guidance/get-started.html
+++ b/app/views/v2/guidance/get-started.html
@@ -4,6 +4,14 @@
 Get started - Apprenticeship services - GOV.UK
 {% endblock %}
 
+{% block beforeContent %}
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-full">
+      <a href="javascript:history.back()" class="govuk-back-link">Back</a>
+  </div>
+</div>
+{% endblock %}
+
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
