Provider dashboard - fixed the link to Reports

--- a/app/views/v2/provider/dashboard.html
+++ b/app/views/v2/provider/dashboard.html
@@ -220,7 +220,7 @@ Recruitment - Apprenticeships - GOV.UK
     <div class="govuk-grid-row">
 
       <div class="govuk-grid-column-one-third ">
-        <h3 class="govuk-heading-s"><a class="govuk-link  govuk-link--no-visited-state" href="permissions/providers-none">Reports</a></h3>
+        <h3 class="govuk-heading-s"><a class="govuk-link  govuk-link--no-visited-state" href="reports/dashboard">Reports</a></h3>
         <p class="govuk-body">Create a report about applicants or vacancies.</p>
       </div>
 
