Provider dashboard - fixed the menu

--- a/app/views/tp-home-layout.html
+++ b/app/views/tp-home-layout.html
@@ -82,11 +82,11 @@
       <div class="header-organisation" role="navigation">
           <nav class="header-inner">
               <ul role="menubar" id="global-nav-links">
-                  <li><a href="account-home" role="menuitem">Home</a></li>                  
+                  <li><a href="account-home" class="selected" role="menuitem">Home</a></li>                  
                   <li><a href="#" role="menuitem">Apprentice requests</a></li>
                   <li><a href="#" role="menuitem">Manage funding</a></li>
                   <li><a href="#" role="menuitem">Manage your apprentices</a></li>
-                  <li><a href="#" class="selected" role="menuitem">Recruit apprentices</a></li>
+                  <li><a href="dashboard" role="menuitem">Recruit apprentices</a></li>
                   <li><a href="#" role="menuitem">Organisations and agreements</a></li>
               </ul>
           </nav>
