Employers - fixed menu and Dev portal - removed subscribe journey

--- a/app/views/ma-home-layout.html
+++ b/app/views/ma-home-layout.html
@@ -73,19 +73,19 @@
           </div>
       </div>
 
-      <div class="header-organisation" role="navigation">
+      <!--<div class="header-organisation" role="navigation">
           <nav class="header-inner">
               <ul role="menubar" id="global-nav-links">
-                  <li><a href="home" role="menuitem">Home</a></li>
+                  <li><a href="#" class="selected" role="menuitem">Home</a></li>
                   <li><a href="#" role="menuitem">Finance</a></li>
-                  <li><a href="#" class="selected" role="menuitem">Adverts</a></li>
+                  <li><a href="dashboard" role="menuitem">Adverts</a></li>
                   <li><a href="#" role="menuitem">Apprentices</a></li>
                   <li><a href="#" role="menuitem">Your team</a></li>
                   <li><a href="#" role="menuitem">Your organisations and agreements</a></li>
                   <li><a href="#" role="menuitem">PAYE schemes</a></li>
               </ul>
           </nav>
-      </div>
+      </div>-->
 
     {% endblock %}
 {% endblock %}
