--- a/app/views/v2/employer/api/api-hub-copied.html
+++ b/app/views/v2/employer/api/api-hub-copied.html
@@ -23,7 +23,7 @@ Key for API - Manage apprenticeships - GOV.UK
           </p>
           <div class="app-summary-card ">
             <header class="app-summary-card--header">
-              <h3 class="app-summary-card--title">Recruitment API (Live)</h3>
+              <h3 class="app-summary-card--title">Recruitment API</h3>
               <div class="app-summary-card__actions">
                 <!--<ul class="app-summary-card__actions-list">
                   <li class="app-summary-card__actions-list-item">
