--- a/app/views/v2/guidance/api-hub-copied.html
+++ b/app/views/v2/guidance/api-hub-copied.html
@@ -61,7 +61,7 @@ Display adverts API key - Manage apprenticeships - GOV.UK
                   </span>
                 </summary>
                 <div class="govuk-details__text">
-                  <a href="api-confirm-key" class="govuk-link govuk-link--no-visited-state">Renewing the key</a> will disable the previous key and will stop your API from working until you use the new key.
+                  Renewing the key will disable the previous key and will stop your API from working until you use the new key. <a href="api-confirm-key" class="govuk-link govuk-link--no-visited-state">Renew the key</a>.
                 </div>
               </details>
             </div>
