--- a/app/views/v2/guidance/api-list.html
+++ b/app/views/v2/guidance/api-list.html
@@ -1,16 +1,24 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-Subscribe to the APIs - Apprenticeship services - GOV.UK
+Display adverts API - Apprenticeship services - GOV.UK
+{% endblock %}
+
+{% block beforeContent %}
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-full">
+      <a href="javascript:history.back()" class="govuk-back-link">Back</a>
+  </div>
+</div>
 {% endblock %}
 
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-xl">Subscribe to the APIs</h1>
-    <p class="govuk-body">
+    <h1 class="govuk-heading-xl">Display adverts API</h1>
+    <!--<p class="govuk-body">
       You need to subscribe to the API to copy an API key and give it to your developer, this gives them permission to connect to the API on your behalf.
-    </p>
+    </p>-->
     <table class="govuk-table">
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
@@ -25,8 +33,8 @@ Subscribe to the APIs - Apprenticeship services - GOV.UK
             <span class="govuk-caption-m">Display recruitment adverts from Find an apprenticeship.</span>
           </td>
           <td class="govuk-table__cell">
-            <a href="api-subscribe" class="govuk-link govuk-link--no-visited-state">
-              Subscribe
+            <a href="api-hub" class="govuk-link govuk-link--no-visited-state">
+              Get key
             </a>  
           </td>
         </tr>
