--- a/app/views/v2/provider/account-home.html
+++ b/app/views/v2/provider/account-home.html
@@ -6,7 +6,7 @@
 <div class="govuk-grid-row govuk-!-margin-top-7">
 	<div class="govuk-grid-column-full">
 		<h1 class="govuk-heading-xl heading-dashboard" id="provider-name">
-			<!--{{data['provider-name']}}-->APEX TRAINING LIMITED
+			{{data['providerName']}}
 			<span class="govuk-caption-m govuk-!-font-weight-bold">UKPRN: 10000001</span>
 		</h1>
 		<hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
