Dev portal - tidied up Display adverts API naming convention

--- a/app/views/v2/employer/api/api-list.html
+++ b/app/views/v2/employer/api/api-list.html
@@ -48,7 +48,7 @@ API list - Manage apprenticeships - GOV.UK
       
         <tr class="govuk-table__row">
           <td class="govuk-table__cell" id="display-adverts-api" name="api-name">
-            Display adverts API (Live)
+            Display adverts API
             <span class="govuk-caption-m">Display recruitment adverts from Find an apprenticeship.</span>
           </td>
           <td class="govuk-table__cell">
