--- a/app/views/v2/guidance/api-hub-new-key.html
+++ b/app/views/v2/guidance/api-hub-new-key.html
@@ -25,7 +25,7 @@ Display adverts API key - Manage apprenticeships - GOV.UK
           </p>          
           <div class="app-summary-card ">
             <header class="app-summary-card--header">
-              <h3 class="app-summary-card--title">Display Advert API (Live)</h3>
+              <h3 class="app-summary-card--title">Display adverts API</h3>
               <div class="app-summary-card__actions">
               </div>
             </header>
