--- a/app/views/v2/guidance/api-list.html
+++ b/app/views/v2/guidance/api-list.html
@@ -33,7 +33,7 @@ Display adverts API - Apprenticeship services - GOV.UK
             <span class="govuk-caption-m">Display recruitment adverts from Find an apprenticeship.</span>
           </td>
           <td class="govuk-table__cell">
-            <a href="api-hub" class="govuk-link govuk-link--no-visited-state">
+            <a href="display-adverts-api-key" class="govuk-link govuk-link--no-visited-state">
               Get key
             </a>  
           </td>
