--- a/app/views/v2/guidance/api-hub-copied.html
+++ b/app/views/v2/guidance/api-hub-copied.html
@@ -23,7 +23,7 @@ Display adverts API key - Manage apprenticeships - GOV.UK
           </p>          
           <div class="app-summary-card ">
             <header class="app-summary-card--header">
-              <h3 class="app-summary-card--title">Display adverts API</h3>
+              <h3 class="app-summary-card--title">Display Advert API</h3>
               <div class="app-summary-card__actions">
               </div>
             </header>
@@ -57,7 +57,7 @@ Display adverts API key - Manage apprenticeships - GOV.UK
               <details class="govuk-details" data-module="govuk-details">
                 <summary class="govuk-details__summary">
                   <span class="govuk-details__summary-text">
-                    Do you need a new key?
+                    Do you need a new API key?
                   </span>
                 </summary>
                 <div class="govuk-details__text">
