--- a/app/views/v2/guidance/display-adverts-api-key.html
+++ b/app/views/v2/guidance/display-adverts-api-key.html
@@ -16,18 +16,18 @@ Display adverts API key - Apprenticeship service - GOV.UK
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-xl">Display adverts API key</h1>
       <p class="govuk-body">
-        You need to copy a key and give it to your developer, this gives them permission to connect to the API on your behalf.
+        You need to copy the API key and give it to your developer, this gives them permission to connect to the API on your behalf.
       </p>      
       <div class="app-summary-card ">
         <header class="app-summary-card--header">
-          <h3 class="app-summary-card--title">Display Adverts API (Live)</h3>
+          <h3 class="app-summary-card--title">Display Advert API</h3>
           <div class="app-summary-card__actions">
           </div>
         </header>
         <div class="app-summary-card--content">
           <p class="govuk-body">
             Display recruitment adverts from Find an apprenticeship.<br>
-            Give the key and <a href="" class="govuk-link govuk-link--no-visited-state">this link to the API page</a> to your developer.
+            Give the API key and <a href="display-adverts-api-documentation" class="govuk-link govuk-link--no-visited-state">this link to the API page</a> to your developer.
           </p>
           <dl class="govuk-summary-list govuk-summary-list__m">
             <div class="govuk-summary-list__row">
@@ -56,11 +56,11 @@ Display adverts API key - Apprenticeship service - GOV.UK
           <details class="govuk-details" data-module="govuk-details">
             <summary class="govuk-details__summary">
               <span class="govuk-details__summary-text">
-                Do you need a new key?
+                Do you need a new API key?
               </span>
             </summary>
             <div class="govuk-details__text">
-              <a href="api-confirm-key" class="govuk-link govuk-link--no-visited-state">Renewing the key</a> will disable the previous key and will stop your API from working until you use the new key.
+              Renewing the key will disable the previous key and will stop your API from working until you use the new key. <a href="api-confirm-key" class="govuk-link govuk-link--no-visited-state">Renew the key</a>.
             </div>
           </details>
         </div>
