Home page tidy up

--- a/app/views/v2/_summary.html
+++ b/app/views/v2/_summary.html
@@ -45,7 +45,7 @@
           <h4 class="govuk-heading-s govuk-!-margin-top-4" style="margin-bottom:10px;">Protoype links</h4>                                        
             <li><a href="v2/employer/login" class="govuk-link govuk-link--no-visited-state">Employer service (starts at Sign in)</a></li>
             <li><a href="v2/provider/login" class="govuk-link govuk-link--no-visited-state">Provider service (starts at Sign in)</a></li>
-            <li><a href="v2/guidance/get-started" class="govuk-link govuk-link--no-visited-state">Dev portal API page</a></li>     
+            <li><a href="v2/guidance/get-started" class="govuk-link govuk-link--no-visited-state">Dev portal</a></li>     
         </ul>
   </div>
 </div>
