Emploters - API key screens content updates

--- a/app/views/v2/employer/api/api-hub.html
+++ b/app/views/v2/employer/api/api-hub.html
@@ -19,7 +19,7 @@ Key for API - Manage apprenticeships - GOV.UK
     }) }}-->
         <h1 class="govuk-heading-xl">Key for API</h1>
           <p class="govuk-body">
-            You need to copy a key and give it to your developer, this gives them permission to connect to the API on your behalf.
+            You need to copy the API key and give it to your developer, this gives them permission to connect to the API on your behalf.
           </p>
           <div class="app-summary-card ">
             <header class="app-summary-card--header">
@@ -37,7 +37,7 @@ Key for API - Manage apprenticeships - GOV.UK
             <div class="app-summary-card--content">
               <p class="govuk-body">
                 Create an advert on any website and Find an apprenticeship.<br>
-                Give the key and <a href="../../guidance/recruitment-api-documentation" class="govuk-link govuk-link--no-visited-state">the link to the API page</a> to your developer.
+                Give the API key and <a href="../../guidance/recruitment-api-documentation" class="govuk-link govuk-link--no-visited-state">the link to the API page</a> to your developer.
               </p>
               <dl class="govuk-summary-list govuk-summary-list__m">
                 <div class="govuk-summary-list__row">
