Providers, employers and dev portal screens updated with content

--- a/app/views/v2/employer/api/api-hub-copied.html
+++ b/app/views/v2/employer/api/api-hub-copied.html
@@ -65,11 +65,11 @@ Key for API - Manage apprenticeships - GOV.UK
               <details class="govuk-details" data-module="govuk-details">
                 <summary class="govuk-details__summary">
                   <span class="govuk-details__summary-text">
-                    Do you need a new key?
+                    Do you need a new API key?
                   </span>
                 </summary>
                 <div class="govuk-details__text">
-                  Renewing the key will disable the previous key and will stop your API from working until you use the new key. <a href="api-confirm-key" class="govuk-link govuk-link--no-visited-state">Renew the key</a>.
+                  Renewing the key will disable the previous key and will stop your API from working until you use the new key. <a href="api-confirm-key" class="govuk-link govuk-link--no-visited-state">Renew key</a>.
                 </div>
               </details>
             </div>
