--- a/app/views/v2/guidance/display-adverts-api-key.html
+++ b/app/views/v2/guidance/display-adverts-api-key.html
@@ -16,7 +16,7 @@ Display adverts API key - Apprenticeship service - GOV.UK
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-xl">Display adverts API key</h1>
       <p class="govuk-body">
-        You need to copy the API key and give it to your developer, this gives them permission to connect to the API on your behalf.
+        You need to copy the API key and use it to access the API. If you give it to a developer, this gives them permission to connect to the API on your behalf.
       </p>      
       <div class="app-summary-card ">
         <header class="app-summary-card--header">
@@ -60,7 +60,7 @@ Display adverts API key - Apprenticeship service - GOV.UK
               </span>
             </summary>
             <div class="govuk-details__text">
-              Renewing the key will disable the previous key and will stop your API from working until you use the new key. <a href="api-confirm-key" class="govuk-link govuk-link--no-visited-state">Renew the key</a>.
+              Renewing the key will disable the previous key and will stop your API from working until you use the new key. <a href="api-confirm-key" class="govuk-link govuk-link--no-visited-state">Renew key</a>.
             </div>
           </details>
         </div>
