--- a/app/views/v2/provider/api/api-hub-new-key.html
+++ b/app/views/v2/provider/api/api-hub-new-key.html
@@ -20,11 +20,11 @@ Key for API - Apprenticeships - GOV.UK
     }) }}
         <h1 class="govuk-heading-xl govuk-!-margin-top-6">Key for API</h1>
           <p class="govuk-body">
-            You need to copy a key and give it to your developer, this gives them permission to connect to the API on your behalf.
+            You need to copy the API key and give it to your developer, this gives them permission to connect to the API on your behalf.
           </p>
           <div class="app-summary-card ">
             <header class="app-summary-card--header">
-              <h3 class="app-summary-card--title">Recruitment API (Live)</h3>
+              <h3 class="app-summary-card--title">Recruitment API</h3>
               <div class="app-summary-card__actions">
                 <!--<ul class="app-summary-card__actions-list">
                   <li class="app-summary-card__actions-list-item">
@@ -37,8 +37,8 @@ Key for API - Apprenticeships - GOV.UK
             </header>
             <div class="app-summary-card--content">
               <p class="govuk-body">
-                Create an advert on any website and Find an apprenticeship.<br>
-                Give the key and <a href="../../guidance/recruitment-api-documentation" class="govuk-link govuk-link--no-visited-state">this link to the API page</a> to your developer.
+                Create a vacancy on any website and Find an apprenticeship.<br>
+                Give the API key and <a href="../../guidance/recruitment-api-documentation" class="govuk-link govuk-link--no-visited-state">this link to the API page</a> to your developer.
               </p>
               <dl class="govuk-summary-list govuk-summary-list__m">
                 <div class="govuk-summary-list__row">
@@ -58,11 +58,11 @@ Key for API - Apprenticeships - GOV.UK
               <details class="govuk-details" data-module="govuk-details">
                 <summary class="govuk-details__summary">
                   <span class="govuk-details__summary-text">
-                    Do you need a new key?
+                    Do you need a new API key?
                   </span>
                 </summary>
                 <div class="govuk-details__text">
-                  Renewing the key will disable the previous key and will stop your API from working until you use the new key. <a href="api-confirm-key" class="govuk-link govuk-link--no-visited-state">Renew the key</a>.
+                  Renewing the key will disable the previous key and will stop your API from working until you use the new key. <a href="api-confirm-key" class="govuk-link govuk-link--no-visited-state">Renew key</a>.
                 </div>
               </details>
             </div>
