--- a/app/views/v2/provider/api/api-list.html
+++ b/app/views/v2/provider/api/api-list.html
@@ -25,7 +25,7 @@ API list - Apprenticeships - GOV.UK
       <tbody class="govuk-table__body">
         <tr class="govuk-table__row">
           <td class="govuk-table__cell" id="recruitment-api-live">
-            Recruitment API (Live)
+            Recruitment API
             <span class="govuk-caption-m">Create an advert on any website and Find an apprenticeship.</span>
           </td>          
           <td class="govuk-table__cell">
@@ -48,7 +48,7 @@ API list - Apprenticeships - GOV.UK
       
         <tr class="govuk-table__row">
           <td class="govuk-table__cell" id="display-adverts-api">
-            Display adverts API (Live)
+            Display adverts API
             <span class="govuk-caption-m">Display recruitment adverts from Find an apprenticeship.</span>
           </td>
           <td class="govuk-table__cell">
