--- a/app/views/v2/guidance/api-hub-copied.html
+++ b/app/views/v2/guidance/api-hub-copied.html
@@ -19,11 +19,11 @@ Display adverts API key - Manage apprenticeships - GOV.UK
     }) }}-->
         <h1 class="govuk-heading-xl">Display adverts API key</h1>
           <p class="govuk-body">
-            You need to copy the API key and give it to your developer, this gives them permission to connect to the API on your behalf.
+            You need to copy the API key and use it to access the API. If you give it to a developer, this gives them permission to connect to the API on your behalf.
           </p>          
           <div class="app-summary-card ">
             <header class="app-summary-card--header">
-              <h3 class="app-summary-card--title">Display Advert API</h3>
+              <h3 class="app-summary-card--title">Display adverts API</h3>
               <div class="app-summary-card__actions">
               </div>
             </header>
@@ -41,7 +41,7 @@ Display adverts API key - Manage apprenticeships - GOV.UK
                     <code style="color:darkred; font-size:14px;">32cfbdeb64f14277ac33d4dd06640ilj</code>
                   </dd>
                   <dd class="govuk-summary-list__actions">
-                    API key copied
+                    Key copied
                   </dd>
                 </div>            
                 <!--<div class="govuk-summary-list__row">
@@ -61,7 +61,7 @@ Display adverts API key - Manage apprenticeships - GOV.UK
                   </span>
                 </summary>
                 <div class="govuk-details__text">
-                  Renewing the key will disable the previous key and will stop your API from working until you use the new key. <a href="api-confirm-key" class="govuk-link govuk-link--no-visited-state">Renew the key</a>.
+                  Renewing the key will disable the previous key and will stop your API from working until you use the new key. <a href="api-confirm-key" class="govuk-link govuk-link--no-visited-state">Renew key</a>.
                 </div>
               </details>
             </div>
