Dev portal - Get started content updated with links

--- a/app/views/v2/guidance/get-started.html
+++ b/app/views/v2/guidance/get-started.html
@@ -97,8 +97,8 @@ Get started - Apprenticeship services - GOV.UK
     <h2 class="govuk-heading-l">Using our display adverts API if you are working independently</h2>
     <p class="govuk-body">
       If you are not working with an employer or training provider, you can use the Display adverts API to show adverts from Find apprenticeship training on any website.<br><br>
-      You will need to <a href="#" class="govuk-link govuk-link--no-visited-state">get an API key</a> to use the display advert API.<br><br>
-      You can <a href="#" class="govuk-link govuk-link--no-visited-state">view the API</a>, but you will need a key before you can call the API.
+      You will need to <a href="register" class="govuk-link govuk-link--no-visited-state">get an API key</a> to use the display advert API.<br><br>
+      You can <a href="display-adverts-api-documentation" class="govuk-link govuk-link--no-visited-state">view the API</a>, but you will need a key before you can call the API.
     </p>
     <h2 class="govuk-heading-l">API Rate Limiting</h2>
     <p class="govuk-body">
