Employer and provider - add links to FAA

--- a/app/views/v2/guidance/get-started.html
+++ b/app/views/v2/guidance/get-started.html
@@ -86,7 +86,7 @@ Get started - Apprenticeship services - GOV.UK
       <li>the version specified does not exist</li>
     </ul>
     <p class="govuk-body">
-      The apprenticeship maintains the current version of an API, as well as the previous version for a limited period of time. X months after the release of a new version of an API, the previous version will be decommissioned, so you will need to update to the latest version within <span style="color:darkred;">X</span> months of the new one becoming available.
+      The apprenticeship maintains the current version of an API, as well as the previous version for a limited period of time. X months after the release of a new version of an API, the previous version will be decommissioned, so you will need to update to the latest version within <span style="color:red;">X</span> months of the new one becoming available.
     </p>
     <h2 class="govuk-heading-l">Using our APIs if you are working with an employer or training provider</h2>
     <p class="govuk-body">
